MDEV-16279 Spider crashes on CHECKSUM TABLE with spider_quick_mode=3 The fields of the temporary table were not created in create_tmp_table function. Because item->const_item() was true. But the temporary tables that is created by Spider are always used all columns. So Spider should call create_tmp_table function with TMP_TABLE_ALL_COLUMNS flag.